@startuml JournalProgram

class JournalProgram
{
    +Main() : void
}

class Journal
{
    - _entries : List<Entry>
    --
    +LoadFromFile(filename : string) : void
    +SaveToFile(filename : string) : void
    +DeleteEntry(entryIndex : int) : void
    +DisplayEntries() : void
    +AddEntry(entry : Entry) : void
}

class Entry
{
    - _response : string
    - _date : DateTime
    - _prompt : string
    --
    +Entry(date : DateTime, prompt : string, response : string)
    +GetResponse() : string
}

class PromptGen
{
    - _prompts : List<string>
    - _random : Random
    --
    +GetPrompt() : string
}

class Menu
{
    --
    +Write() : void
    +Display() : void
    +Load() : void
    +Save() : void
    +Delete() : void
    +Quit() : void
}

Journal *-- Entry
Menu --> Journal
Menu --> PromptGen
JournalProgram --> Menu

@enduml